# competitive-intelligence-mcp

./: .env  .env.example  .gitignore  DEPLOYMENT.md  README.md  example_usage.py  fastmcp_server.py  pyproject.toml  requirements.txt  run_server.py  schedule_automation.py
.specstory/history/: 2025-11-30_19-15Z-create-a-new-github-repository.md  2025-11-30_19-20Z-review-project-configuration-for-fastmcp-cloud.md  2025-11-30_19-26Z-remove-openai-references-from-project.md
src/: server.py
src/competitive_intelligence/: analysis.py  data_sources.py  report_generation.py
src/daily_planning/: calendar_integration.py  plan_generation.py  task_prioritization.py
src/utils/: ai_processing.py  api_clients.py
tests/: test_competitive_intelligence.py  test_daily_planning.py
